2011-07-08  Sam Steingold  <sds@gnu.org>

	* modules/regexp/regexi.c (REGEXP-EXEC):
	accept :return-type 'boolean instead of :boolean t
	* modules/regexp/regexp.lisp (regexp-matcher):
	pass :return-type 'boolean to regexp-exec

2011-07-08  Sam Steingold  <sds@gnu.org>

	* win32.d, unix.d, lispbibl.d (stdlib, sys/types, unistd, locale)
	(errno): include files which are included in both unix.h and
	win32.d from lispbibl.d instead

2011-07-08  Sam Steingold  <sds@gnu.org>

	* makemake.in: avoid $@ in single-target rules

2011-07-07  Sam Steingold  <sds@gnu.org>

	* configure: pass --with-debug to makemake
	* makemake.in: accept --with-debug instead of positional

2011-07-06  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_CLISP): quote variable in test to avoid error
	"test: too many arguments"

2011-06-24  Sam Steingold  <sds@gnu.org>

	* modules/libsvm/configure.in: check for svm_free_and_destroy_model
	* modules/libsvm/libsvm.lisp: in libsvm 3.1 svm_destroy_model is
	replaced with svm_free_and_destroy_model with a different
	signature, so we have to work around that

2011-06-24  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (PRIORITY, %SET-PRIORITY) [WIN32_NATIVE]:
	compare handles with INVALID_HANDLE_VALUE, not NULL
	(PRIORITY) [WIN32_NATIVE]: make sure failed_p is always set
	* modules/bindings/win32/win32.lisp (GetPriorityClass): add

2011-06-01  Sam Steingold  <sds@gnu.org>

	* pathname.d, subr.d (PROBE-PATHNAME): mark as seclass_rd_sig
	because it may signal permission errors

2011-06-01  Sam Steingold  <sds@gnu.org>

	finish the 2011-05-13 possible_symlink patch
	* pathname.d (my_readlink) [UNIX_LINUX]: do not handle /proc specially
	(stat_for_search) [UNIX_LINUX]: ditto

2011-06-01  Sam Steingold  <sds@gnu.org>

	avoid errors on weird pathnames like ~/.gvfs under gnome
	* pathname.d (get_path_info): accept tolerantp
	(assure_dir_exists): pass tolerantp to get_path_info
	(namestring_kind_t): add NAMESTRING_BAD for existing objects